# ast-analyzer

./: Cargo.toml  README.md
analyzer/: Cargo.toml
analyzer/src/: indexer.rs  lib.rs  llm.rs  lsp.rs  memory.rs  parser.rs  tree.rs
examples/: mystery-1.go  mystery-2.go  mystery-3.go  mystery-4.go  mystery-x-breaks-ai.go
src/: main.rs
src/lib/: mod.rs
